--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -600,7 +600,7 @@ es:
       taken: esta ya utilizado(a)
     connection_refused: Conexión a la base de datos imposible
     location:
-      geocoding_fail: "La geocodificacion ha fracasado:"
+      geocoding_fail: 'La geocodificacion ha fracasado:'
       reversegeocoding_fail: 'La geocodificacion inversa ha fracasado:'
     planning:
       import_too_routes: Intento de importar mas giras que de vehículos disponibles
@@ -615,7 +615,7 @@ es:
     tomtom:
       record: 'Registro %{s}'
     empty: 'Nada a importar, verifique sus datos.'
-    data: "Verificad sus datos:"
+    data: 'Verificad sus datos:'
     data_erroneous:
       csv: 'Fichero invalido, line %{s}'
       json: Fichero invalido
@@ -776,7 +776,7 @@ es:
       new: Nueva unidad entregable
     form:
       label_placeholder: unidad
-      label_help: "Por ejemplo «paquete» o una unidad como «kg»."
+      label_help: Por ejemplo «paquete» o una unidad como «kg».
       default_quantity_help: >-
         Cantidad predeterminada que debe entregarse a todas vuestras visitas
         (dejar vacío si no hay cantidad).
@@ -912,9 +912,7 @@ es:
       title: Nuevo cliente
     import_file:
       refs_duplicate: 'La "referencia": "%{refs}" esta presente en doble en el fichero.'
-      refs_visit_duplicate: >-
-        La "referencia visita":  "%{refs}" esta presente en doble en el
-        fichero.
+      refs_visit_duplicate: 'La "referencia visita": "%{refs}" esta presente en doble en el fichero.'
       route_desc: numero o referencia de la gira en el plan.
       ref_vehicle_desc: referencia o nombre del vehículo que efectúa la parada en le plan.
       stop_format: '[visita | almacén | descanso]'
@@ -960,7 +958,7 @@ es:
       ref_visit_desc: referencia de la visita.
       tags_visit_desc: categorías de la visita (que permiten por ejemplo agruparlos).
       none_column: Ninguna columna correspondiente encontrada
-      missing_location: "«ciudad / código postal» o «lat / lng» que falta."
+      missing_location: «ciudad / código postal» o «lat / lng» que falta.
       ref: referencia
       ref_desc: >-
         una identificación estable, constante y única que permite la
@@ -1022,8 +1020,8 @@ es:
       not_csv: El fichero importado no esta en formato CSV
       empty_file: no contiene ningún dato
       too_many_lines: 'Importe parado, demasiadas líneas (max: %{n}).'
-      missing_name: "«nombre» que falta."
-      invalid_numeric_value: "valor numérico  «%{value}» invalido."
+      missing_name: «nombre» que falta.
+      invalid_numeric_value: 'valor numérico «%{value}» invalido.'
       invalid_stop: El tipo de parada no es válido
       check_custom_columns: Compruebe su definición de las columnas a importar.
     reverse_geocoding:
@@ -1154,8 +1152,8 @@ es:
       optimize_failed: Fracaso durante la optimización
       optimized_at: Optimizado
       zoning_confirm: >-
-        ¿Registrar y aplicar la nueva sectorización? Las giras del plan van a ser
-        modificadas
+        ¿Registrar y aplicar la nueva sectorización? Las giras del plan van a
+        ser modificadas
       page_change_zoning_confirm: ¿Quiere salir de la pagina y perder los cambios de sectorización?
       route_placeholder: Ref. de la gira
       exports: Exportar el plan
@@ -1300,7 +1298,7 @@ es:
         optional: opcional
         deprecated: depreciado
       none_column: Ninguna columna encontrada
-      missing_name: "«nombre» de la configuración predeterminada faltante"
+      missing_name: «nombre» de la configuración predeterminada faltante
       missing_time_window_start_end: hora de inicio o de fin de la configuración predeterminada faltante
       vehicle_usage_set: Configuración de vehículos
       time_window_start: horario inicio
@@ -1308,7 +1306,7 @@ es:
       not_csv: El fichero importado no esta en formato CSV
       empty_file: no contiene ningún dato
       too_many_lines: 'Importe parado, demasiadas líneas (max: %{n}).'
-      invalid_numeric_value: "valor numérico «%{value}» invalido."
+      invalid_numeric_value: 'valor numérico «%{value}» invalido.'
       check_custom_columns: Compruebe su definición de las columnas a importar.
     form:
       service_times_help: >-
@@ -1373,7 +1371,7 @@ es:
       from_planning_help: >-
         Puede tambien mostrar los clientes de un único plan cambiando esta
         sectorización desde el plan
-      stops_from_planning: "Clientes cargados desde el plan «%{s}»"
+      stops_from_planning: 'Clientes cargados desde el plan «%{s}»'
       automatic:
         one: 'Automatico: 1 zona'
         other: 'Automatico:  %{count} zonas'
