--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1405,7 +1405,7 @@ en:
         A KMZ file containing route informations has been attached to this
         E-Mail from %{s}.
       vehicle: 'Vehicle: %{name}'
-      planning: 'Plan: %{name} (date)'
+      planning: 'Plan: %{name} %{date}'
       planning_ref: 'Plan reference: %{ref}'
       route_ref: 'Route reference: %{ref}'
       order_array: 'Orders: %{name}'
@@ -1418,7 +1418,7 @@ en:
         will be automatic) or you can click on this link to download file (no
         update in this case).
       vehicle: 'Vehicle: %{name}'
-      planning: 'Plan: %{name} (date)'
+      planning: 'Plan: %{name} %{date}'
       planning_ref: 'Plan reference: %{ref}'
       route_ref: 'Route reference: %{ref}'
       order_array: 'Orders: %{name}'
@@ -1429,7 +1429,7 @@ en:
       hello: Hello
       content: A tour has been sent to you
       vehicle: 'Vehicle: %{name}'
-      planning: 'Plan: %{name} (date)'
+      planning: 'Plan: %{name} %{date}'
       link: 'Tour link: <a href=%{link}>Tour</a>'
   user_mailer:
     layout:
@@ -1496,7 +1496,7 @@ en:
       panel_one:
         title: Before to start
         content: >-
-          learn which browser to use, about vehicles average speed. How Open
+          learn which browser to use for %{name}, about vehicles average speed. How Open
           Source mapping, geocoding and optimization algorithms run.
         time: ⏱3min.
         doc_link: Doc - Before to start
